# spdif-keepalive

./: .gitignore  CONTRIBUTING.md  LICENSE.txt  README.md  pyproject.toml
.github/scripts/: build-release-aur-package.sh  validate-arch-package.sh
.github/workflows/: publish-aur.yml
examples/: config.toml
packaging/arch/: LICENSE  PKGBUILD  spdif-keepalive.install
scripts/: bump-version  check  test-aur-package
src/spdif_keepalive/: __init__.py  cli.py  config.py  pcm.py  runner.py  sinks.py  volume.py
systemd/: spdif-keepalive-sleep  spdif-keepalive.service
tests/: test_config.py  test_pcm.py  test_sinks.py  test_volume.py
