[build-system]
requires = ["packaging>=24.2", "setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spdif-keepalive"
version = "0.1.0"
description = "Keep S/PDIF optical audio outputs awake with barely perceptible PCM noise."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE.txt"]
authors = [
  { name = "dragon" }
]
keywords = ["spdif", "toslink", "pipewire", "audio", "systemd"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Multimedia :: Sound/Audio",
]
dependencies = []

[project.scripts]
spdif-keepalive = "spdif_keepalive.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
